Added PlotWheel and fixed a bug with visual hopper connection.